# AI_Tools_homework

./: App.tsx  README.md  index.html  package-lock.json  package.json  types.ts
components/: Header.tsx  RequestCard.tsx  RequestDashboard.tsx  RequestForm.tsx
rust-backend/: Cargo.toml  docker-compose.yml
rust-backend/migrations/: 0001_create_todos.sql  0002_create_requests.sql
rust-backend/src/: main.rs
