[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "chrono",
  "uuid"
] }

tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
base64ct = "=1.7.3"

[profile.release]
lto = true
codegen-units = 1

